Added add syscall

--- a/A1/easy/xv6-public-xv6-rev11/Makefile
+++ b/A1/easy/xv6-public-xv6-rev11/Makefile
@@ -183,6 +183,7 @@ UPROGS=\
 	_zombie\
 	_user_toggle\
 	_print_count\
+	_add\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -250,7 +251,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 # check in that version.
 
 EXTRA=\
-	user_toggle.c print_count.c\
+	user_toggle.c print_count.c add.c \
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c zombie.c\
 	printf.c umalloc.c\
